# histgram

./: .gitmodules  CMakeLists.txt  Makefile  cell.cpp  fit_cell.hpp  histgram_maxrect.cpp  histgram_maxrect.hpp  lubee  maxrect.cpp  nboard.cpp  nboard.hpp  vnet.hpp
src/: cell.cpp  cell.hpp  histgram_maxrect.hpp  lubee  maxrect.hpp  nboard.cpp  nboard.hpp  rect.cpp  rect.hpp  vnet.cpp
src/tests/: cell_test.cpp  histgram_maxrect_test.cpp  maxrect.cpp  nboard_test.cpp  vnet_test.cpp  with_genetic.cpp
tests/: histgram_maxrect_test.cpp  maxrect.cpp  vnet_test.cpp  with_genetic.cpp
